Prevent zoom on IOS and android on form selection, updated notfound component, adapted css submit button to proper behavior

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -51,10 +51,9 @@
   margin-bottom: 2px;
   border: 0;
   outline: none;
-  transition: 0.3s;
-  margin-bottom: 0px;
-  border-bottom: solid 2px #8f8f8f;
   cursor: pointer;
+  transition: 0.3s;
+  border-bottom: solid 2px #8f8f8f;
 }
 
 .navbutton:hover {
@@ -67,7 +66,7 @@ h1 {
   font-family: Roboto, sans-serif;
   color: #949494;
   margin: auto;
-  margin-top: 10%;
+  margin-top: 15%;
   text-align: center;
   text-shadow: 0px 0px 5px black;
 }
@@ -185,9 +184,12 @@ select {
   text-overflow: '';
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px) {
   .summoner-search-form {
     width: 70%;
+  }
+  .navbutton, .navbutton-active, .navbutton:hover{
+    font-size: 0.5rem;
   }
   .tft-insights-logo-1 {
     width: 50%;
